cluster/apps/pgadmin/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: default
spec:
  selector:
    app: pgadmin
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    #nodePort: 30080
  type: ClusterIP
